templates/deployment-repo/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: <namespace>
  labels:
    app.kubernetes.io/part-of: <project-name>
