templates/deployment-repo/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <application-name>
  namespace: <namespace>
spec:
  selector:
    app.kubernetes.io/name: <application-name>
  ports:
    - name: http
      port: 8000
      targetPort: http
