templates/deployment-repo/kubernetes/base/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: <application-name>
  namespace: <namespace>
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`<application-hostname>`)
      kind: Rule
      services:
        - name: <application-name>
          port: 8000
  tls: {}
